# coop

./: .gitignore  config.yml  pyproject.toml
src/coop/: agent.py  util.py
