[project]
name = "coop"
version = "0.1.0"
description = ""
authors = [
    {name = "dongkang",email = "docryze@163.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "coop", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
